# apv

./: .gitignore  LICENSE  README.md  pyproject.toml
ansible/: ansible.cfg  playbook.yaml
src/: apv.py  general.py
tests/: test_json.py
tests/data/: complex.json  general.csv  out.json  overlapping.json
